[package]
name = "argus"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/blockfrost/argus"

[dependencies]
async-trait = "0.1.86"
clap = { version = "4.5.30", features = ["derive"] }
config = "0.15.7"
dotenvy = "0.15.7"
gasket = { version = "0.9.0", features = ["derive"] }
miette = { version = "7.4.0", features = ["fancy"] }
pallas = "0.32.0"
serde = { version = "1.0.217", features = ["derive"] }
sqlx = { version = "0.8.3", features = [
    "mysql",
    "runtime-tokio",
    "tls-rustls",
    "time",
] }
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
utxorpc = "0.10.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
